<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/main">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        >
        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meet the\nDevelopers"
                android:textSize="48sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"/>
            <!-- logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mascot_buzybee"
                android:layout_marginTop="-30dp"
                android:layout_marginBottom="-35dp"
                />

        </LinearLayout>
        <!-- Developer 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/about_dev_header"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/ubuntu_mono"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_card"
            android:layout_marginBottom="12dp"
            android:elevation="6dp">
            <ImageView
                android:layout_width="493px"
                android:layout_height="550px"
                android:scaleType="centerCrop"
                android:contentDescription="Profile Image"
                android:background="@drawable/devaus"
                android:layout_marginBottom="-32dp"
                />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="-50dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dev1"
                    android:textSize="20sp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/bz_almostBlack"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dev1_occupation"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/bz_almostBlack"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/dev1_desc"
                    android:textColor="@color/bz_almostBlack"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Developer 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_card"
            android:layout_marginBottom="12dp"
            android:elevation="6dp"
            android:paddingLeft="25dp"
            >
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2"
                    android:textSize="20sp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/bz_almostBlack"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2_occupation"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/bz_almostBlack"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2_desc"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textColor="@color/bz_almostBlack"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="424px"
                android:layout_height="500px"
                android:background="@drawable/devraf"
                android:contentDescription="Profile Image"
                android:scaleType="centerCrop"
                android:layout_marginRight="-10dp"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>