<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meet the\nDevelopers"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="48sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"/>
            <!-- logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mascot_buzybee"
                android:layout_marginTop="-30dp"
                android:layout_marginBottom="-35dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/about_dev_header"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/about_developers_rounded_card"
            android:layout_marginBottom="12dp"
            android:elevation="6dp">
            <ImageView
                android:layout_width="493px"
                android:layout_height="550px"
                android:scaleType="centerCrop"
                android:contentDescription="Profile Image"
                android:background="@drawable/devaus_stroke"
                android:layout_marginBottom="-32dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="-50dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev1"
                    android:textSize="@dimen/font_title"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/bz_almostBlack"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev1_occupation"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/bz_almostBlack"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/dev1_desc"
                    android:textColor="@color/bz_almostBlack"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
        </LinearLayout>

        <!-- Developer 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/about_developers_rounded_card"
            android:layout_marginBottom="12dp"
            android:elevation="6dp"
            android:paddingLeft="25dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2"
                    android:textSize="@dimen/font_title"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/bz_almostBlack"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2_occupation"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/bz_almostBlack"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev2_desc"
                    android:textSize="@dimen/font_normal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textColor="@color/bz_almostBlack"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_rafael"
                android:layout_width="424px"
                android:layout_height="500px"
                android:background="@drawable/devraf_stroke"
                android:contentDescription="Profile Image"
                android:scaleType="centerCrop"
                android:layout_marginRight="-10dp"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cornerRadius="10dp"

            android:text="Back"
            android:fontFamily="@font/ubuntu_bold"
            />

    </LinearLayout>

</ScrollView>
